@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-12-24  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+	* Started a new scripting language utility, conjure.
+
 2001-12-20  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
 	* ImageMagick displays the search path in the event it
 	  cannot find a particular configuration file (thanks to
@@ -32,7 +35,7 @@ ImageMagick Changes</font></font></font></b></td>
 	* Fixed some bugs in the new composite operators.
 
 2001-12-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
-	* coders/wmf.c : Added native BLOB support.
+	* Added native BLOB support to coders/wmf.c.
 
 2001-12-13  Leonard Rosenthol  &lt;leonardr@lazerware.com&gt;
 	* Added new composite operators to support PSD/XCF layer
