@@ -1,3 +1,6 @@
+2001-12-24  Cristy  <cristy@mystic.es.dupont.com>
+	* Started a new scripting language utility, conjure.
+
 2001-12-20  Cristy  <cristy@mystic.es.dupont.com>
 	* ImageMagick displays the search path in the event it
 	  cannot find a particular configuration file (thanks to
@@ -7,7 +10,7 @@
 	* Fixed some bugs in the new composite operators.
 
 2001-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
-	* coders/wmf.c : Added native BLOB support.
+	* Added native BLOB support to coders/wmf.c.
 
 2001-12-13  Leonard Rosenthol  <leonardr@lazerware.com>
 	* Added new composite operators to support PSD/XCF layer
